syntax = "proto3";

package user.v1;

option go_package = "github.com/krok-o/krok-o/proto/user/v1;userv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message ApiKey {
  int32 id = 1;
  string name = 2;
  int32 user_id = 3;
  string key_id = 4;
  string key_secret = 5;
  google.protobuf.Timestamp ttl = 6;
}

message CreateApiKeyRequest {
  string user_id = 1;
  string name = 2;
}

service ApiKeyService {
  rpc CreateApiKey(CreateApiKeyRequest) returns (ApiKey) {}
}
